--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["activeTab", "scripting", "storage", "offscreen"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
