--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,9 @@
     "service_worker": "background.js"
   },
   "permissions": ["activeTab", "scripting", "storage", "offscreen"],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
