--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/chrome": "^0.1.32",
     "@types/node": "^25.0.3",
+    "prettier": "^3.7.4",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
