Choose not to add a delete / expand button. Added a toggle to settings to auto-expand, off by default Integrated settings directly to floating island (separate to expansion, and works well with it) Changed style to Google's material 3. Modified thee settings icon & clipboard icon Add shortcut ability to run the extension, changable by user in chrome:extension/shortcut, though looks pretty ugly right now.
Next step:
- Refine the notification / shortcut UI
- Optimize the codebase (constants.ts)
- Optimize the tesseract.js engine (best mode by default)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,11 +2,28 @@
   "manifest_version": 3,
   "name": "screenshot-reader",
   "version": "1.0.0",
-  "action": {},
+  "action": {
+    "default_title": "Screenshot Reader (Alt/Command +Shift+S)"
+  },
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["activeTab", "scripting", "storage", "offscreen"],
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage",
+    "offscreen",
+    "contextMenus"
+  ],
+  "commands": {
+    "command-trigger-screenshot": {
+      "suggested_key": {
+        "default": "Alt+Shift+S",
+        "mac": "Command+Shift+S"
+      },
+      "description": "Capture Area"
+    }
+  },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   },
