--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,7 +22,7 @@
     }
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; connect-src 'self' https://tessdata.projectnaptha.com;"
   },
   "content_scripts": [
     {
